# building-effective-agents

./: .gitignore  CLAUDE.md  LICENSE  README.md  SUMMARY.md  course-roadmap.jsx  curriculum.md  package.json
.github/workflows/: deploy-pages.yml
labs/phase_0_llm_core/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase_1_tool_system/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase_1_tool_system/fixtures/sandbox_test/: sample.py
labs/phase_1_tool_system/phase_1/: __init__.py  demo.py  file_tools.py  registry.py  shell_tools.py  types.py
labs/phase_1_tool_system/scripts/: grade.py
labs/phase_1_tool_system/tests/: test_lab1_registry.py  test_lab2_file_tools.py  test_lab3_shell_tools.py
labs/phase_3_agent_core/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase_3_agent_core/phase_3/: __init__.py  agent_loop.py  cli.py  error_recovery.py  permissions.py  sample_tasks.py  types.py
labs/phase_3_agent_core/scripts/: grade.py
labs/phase_3_agent_core/tests/: test_lab1_agent_loop.py  test_lab2_error_recovery.py  test_lab3_permissions.py
labs/phase_4_orchestration/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase_4_orchestration/phase_4/: __init__.py  cli.py  eval_framework.py  evaluator.py  orchestrator.py  sample_tasks.py  types.py
labs/phase_4_orchestration/scripts/: grade.py
labs/phase_4_orchestration/tests/: test_lab1_orchestrator.py  test_lab2_evaluator.py  test_lab3_eval_framework.py
labs/phase_5_cli/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase_5_cli/phase_5/: __init__.py  cli.py  cli_app.py  config.py  sample_config.py  session.py  types.py
labs/phase_5_cli/scripts/: grade.py
labs/phase_5_cli/tests/: test_lab1_cli_app.py  test_lab2_config.py  test_lab3_session.py
scripts/: grade.ts
src/: cli.ts  client.ts  context.ts  sample-tools.ts  tools.ts  types.ts
website/: index.html  package-lock.json  package.json  vite.config.ts
(+71 files in other folders)
