[project]
name = "phase-5-cli"
version = "0.1.0"
description = "Phase 5: Ship It — 產品化 CLI 體驗"
requires-python = ">=3.11"
dependencies = ["anthropic>=0.40.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-mock>=3.14"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
